--- a/.env
+++ b/.env
@@ -12,18 +12,18 @@ fi
 export PROJECT_NAME=$OPEN_PROJECT_NAME
 export PROJECT_DIR="$PWD"
 
-if [ ! -f "pyvenv.cfg" ]; then
+if [ ! -f "venv" ]; then
     if ! hash pyvenv 2>/dev/null; then
         alias pyvenv="pyvenv-3.4";
     fi
 
     echo "Making venv for $PROJECT_NAME"
-    pyvenv .
-    . bin/activate
+    pyvenv venv
+    . venv/bin/activate
     pip install -r requirements/development.txt
 fi
 
-. bin/activate
+. venv/bin/activate
 
 # Let's make sure this is a hubflow enabled repo
 yes | git hf init >/dev/null 2>/dev/null
