Update blox to use short

--- a/.env
+++ b/.env
@@ -12,15 +12,31 @@ fi
 export PROJECT_NAME=$OPEN_PROJECT_NAME
 export PROJECT_DIR="$PWD"
 
-if [ ! -f "venv" ]; then
-    if ! hash pyvenv 2>/dev/null; then
-        alias pyvenv="pyvenv-3.4";
+if [ ! -d "venv" ]; then
+     if ! hash pyvenv 2>/dev/null; then
+        function pyvenv()
+        {
+            if hash pyvenv-3.6 2>/dev/null; then
+                pyvenv-3.6 $@
+            elif hash pyvenv-3.5 2>/dev/null; then
+                pyvenv-3.5 $@
+            elif hash pyvenv-3.4 2>/dev/null; then
+                pyvenv-3.4 $@
+            elif hash pyvenv-3.3 2>/dev/null; then
+                pyvenv-3.3 $@
+            elif hash pyvenv-3.2 2>/dev/null; then
+                pyvenv-3.2 $@
+            else
+                python3 -m venv $@
+            fi
+        }
     fi
 
     echo "Making venv for $PROJECT_NAME"
     pyvenv venv
     . venv/bin/activate
     pip install -r requirements/development.txt
+    python setup.py install
 fi
 
 . venv/bin/activate
